--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@storybook/testing-library": "^0.0.13",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
+    "gulp": "^4.0.2",
+    "gulp-compile-handlebars": "^0.6.1",
+    "gulp-inline-css": "^4.0.0",
+    "gulp-wrapper": "^1.0.0",
     "handlebars": "^4.7.7",
     "handlebars-loader": "^1.7.2",
     "html-loader": "1.3.2",
@@ -29,7 +33,7 @@
   },
   "dependencies": {},
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "gulp",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "prettier": "prettier --write ."
