--- a/package.json
+++ b/package.json
@@ -3,18 +3,37 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "yarn storybook & yarn backend",
+    "build": "gulp",
+    "build:addons": "tsc --project ./addons/tsconfig.json",
+    "build:addons:watch": "yarn build:addons --watch",
+    "build:backend": "tsc --project ./server/tsconfig.json",
+    "build:backend:watch": "yarn build:backend --watch",
+    "deploy": "firebase deploy --only hosting",
+    "backend": "node ./server/build/index.js",
+    "backend:development": "node ./server/build/index.js --development",
+    "backend:development:watch": "nodemon ./server/build/index.js --development",
+    "storybook": "start-storybook -p 6006 --no-manager-cache",
+    "storybook:build": "build-storybook",
+    "prettier": "prettier --write ."
+  },
   "devDependencies": {
     "@babel/core": "^7.20.2",
-    "@storybook/addon-a11y": "^6.5.13",
-    "@storybook/addon-actions": "^6.5.13",
-    "@storybook/addon-essentials": "^6.5.13",
-    "@storybook/addon-interactions": "^6.5.13",
-    "@storybook/addon-links": "^6.5.13",
+    "@storybook/addon-a11y": "^6.5.14",
+    "@storybook/addon-actions": "^6.5.14",
+    "@storybook/addon-essentials": "^6.5.14",
+    "@storybook/addon-interactions": "^6.5.14",
+    "@storybook/addon-links": "^6.5.14",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/builder-webpack4": "^6.5.13",
-    "@storybook/html": "^6.5.13",
-    "@storybook/manager-webpack4": "^6.5.13",
+    "@storybook/builder-webpack4": "^6.5.14",
+    "@storybook/html": "^6.5.14",
+    "@storybook/manager-webpack4": "^6.5.14",
     "@storybook/testing-library": "^0.0.13",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.14",
+    "@types/inline-css": "^3.0.1",
+    "@types/react": "^17.0.0",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
     "gulp": "^4.0.2",
@@ -27,20 +46,27 @@
     "html-loader": "1.3.2",
     "html-webpack-plugin": "4.5.1",
     "inky": "^1.4.2",
+    "nodemon": "^2.0.20",
     "postcss": "^8.4.19",
     "prettier": "^2.8.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3"
   },
-  "dependencies": {},
-  "scripts": {
-    "build": "gulp",
-    "deploy": "firebase deploy --only hosting",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "prettier": "prettier --write ."
+  "dependencies": {
+    "axios": "^1.2.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "inline-css": "^4.0.1",
+    "react-textarea-autosize": "^8.4.0"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0"
   },
   "prettier": {
     "printWidth": 80
+  },
+  "volta": {
+    "node": "16.19.0"
   }
 }
