--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "CommonJS",
+    "target": "ES6",
     "esModuleInterop": true
   },
   "include": ["./src/**/*.ts"]
