feat: migrate firebase hosting

--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,7 @@
 {
   "hosting": {
+    "site": "foundation-emails",
     "public": "storybook-static",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   }
 }
