--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,7 +16,14 @@ jobs:
         with:
           node-version: 16.x
           cache: "yarn"
-      - run: yarn && yarn build-storybook
+      - name: Run install
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: install
+      - name: Run build
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: build-storybook
       - name: Deploy
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
